# random

./: .gitignore
blockchain-programming/: README.md
blockchain-programming/algorand-pyteal/: README.md  client.py  requirements.txt  simple_counter.py
blockchain-programming/bitcoin-mining/: README.md  requirements.txt  simple_bitcoin.py  test_bitcoin.py
blockchain-programming/defi-staking-example/: README.md  SimpleStaking.sol
blockchain-programming/ethereum-solidity/: README.md  SimpleToken.sol  hardhat.config.js  package.json
blockchain-programming/ethereum-solidity/scripts/: deploy.js
blockchain-programming/ethereum-solidity/test/: SimpleToken.test.js
blockchain-programming/polygon-nft/: LearnNFT.sol  README.md  hardhat.config.js  package.json
blockchain-programming/polygon-nft/metadata/: 1.json  genesis.json
blockchain-programming/polygon-nft/scripts/: deploy.js  mint.js
blockchain-programming/solana-rust/: Cargo.toml  README.md  client.ts  package.json
blockchain-programming/solana-rust/src/: lib.rs
blockchain-programming/solana-rust/tests/: integration.rs
