[package]
name = "simple-solana-program"
version = "0.1.0"
edition = "2021"
description = "A beginner Solana program demonstrating basic blockchain operations"

[lib]
crate-type = ["cdylib"]

[dependencies]
solana-program = "~1.17.0"
spl-token = "~4.0.0"
borsh = "~0.10.3"
thiserror = "1.0.50"

[dev-dependencies]
solana-program-test = "~1.17.0"
solana-sdk = "~1.17.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
